--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
           <img src="./static/gifs/animation_abc_8031.gif" alt="abc-8031">
         </div>
       </div>
+      <p>
+        ARO-Net encodes <b>contextual</b> information from anchors, which is different against <a href="https://github.com/ErlerPhilipp/points2surf">Points2Surf</a> and <a href="https://pengsongyou.github.io/conv_onet">ConvONet</a> that encode <b>neighboring</b> information around query point, yielding better reconstruction on details (see the holes) and generalizability on unseen categories.
+      </p>
     </div>
   </div>
 </section>
