--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </video>
       </div>
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">ARO</span> is a new representation for shapes based on radial obverbations from a set of viewpoints.
+        <span class="dnerf">ARO</span> is a new representation for shapes based on radial observations from a set of viewpoints.
       </h2>
     </div>
   </div>
@@ -170,9 +170,6 @@
           <img src="./static/gifs/animation_abc_8031.gif" alt="abc-8031">
         </div>
       </div>
-      <p>
-        ARO-Net encodes <b>contextual</b> information from anchors, which is different against <a href="https://github.com/ErlerPhilipp/points2surf">Points2Surf</a> and <a href="https://pengsongyou.github.io/conv_onet">ConvONet</a> that encode <b>neighboring</b> information around query point, yielding better reconstruction on details (see the holes) and generalizability on unseen categories.
-      </p>
     </div>
   </div>
 </section>
