--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
         <div class="content has-text-justified">
           <p>
-            Visually, ARONet produces the most complete, artifact-free results with faithful reconstruction of fine details. In this airplane case, ARO-Net managed to reconstruct the left-side turbine from extremely sparse points, while other methods all completely missed it.
+            Visually, ARO-Net produces the most complete, artifact-free results with faithful reconstruction of fine details. In this airplane case, ARO-Net managed to reconstruct the left-side turbine from extremely sparse points, while other methods all completely missed it.
           </p>
           <div class="item airplane_7">
             <img src="./static/gifs/animation_airplane_7_view1.gif" alt="airplane_7_view1">
@@ -334,7 +334,7 @@
           </p>
 
           <p>
-            When all methids are trained on 2048-point input and tested on 2048-point input, ARO achieves the best reconstruction quality while results from others are also okay.
+            When all methods are trained on 2048-point input and tested on 2048-point input, ARO achieves the best reconstruction quality while results from others are also okay.
           </p>
           <div class="item abc_8026">
             <img src="./static/gifs/animation_abc_8260_pcd_2048.gif" alt="abc-8026-2048">
